turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:11: error: type mismatch;
 found   : (x: Double)Double <and> (x: Float)Float <and> (x: Long)Long <and> (x: Int)Int <and> (x: Char)Int <and> (x: Short)Int <and> (x: Byte)Int
 required: Int
			setCouleurBrosse(colors((i+1)%colors.length-))
                                                                   ^